[package]
name = "lightbulb-device-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
paho-mqtt = "0.12.1"
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
toml = "0.7.6"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std", "serde"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"