[package]
name = "lightbulb-device-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
paho-mqtt = "0.12.1"
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
toml = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std", "serde"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
event-emitter-rs = "0.1.4"
tokio-modbus = "0.9"
tokio-serial = "5.4.1"
dmx = "0.2.1"
rodio = "0.17.1"
rusqlite = "0.29.0"